test-data/unit/check-basic.test
[case bindingsDeclareSort]
from egg_smol.bindings import EGraph, Var

egraph = EGraph()  # type: EGraph
egraph.declare_sort(
    "MyMap",
    ("Map", [Var("i64"), Var("String")]),
)

egraph.declare_sort(
    "MyMap", ["i64", "String"] # E: Argument 2 to "declare_sort" of "EGraph" has incompatible type "List[str]"; expected "Optional[Tuple[str, List[Union[Lit, Var, Call]]]]"
)
